@@ -1,0 +1,8 @@
+{
+    "description": "Minimum versions needed of various things.",
+    "c++": "17",
+    "libpq": "9.6",
+    "postgresql": "9.6",
+    "gcc": "8",
+    "clang": "11"
+}
